<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                style="@style/GreyBlockStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/ll_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account_circle" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_account_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account_settings_black_24dp" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_settings" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/GreyBlockStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/ll_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_version_black_24dp" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_upgrade_to_premium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_crown_black_24dp" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upgrade_to_premium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/GreyBlockStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/ll_suggest_an_idea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_suggestion_black_24dp" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suggest_an_idea" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_help_circle_outline" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/settings_item_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_information_outline" />

                    <TextView
                        style="@style/settings_item_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
